<resources>
    <string name="app_name">TARUC Traverse</string>
    <string name="title_map">Map</string>
    <string name="title_chatbot">Chatbot</string>
    <string name="title_user">User</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_type">Choose User Type</string>
    <string name="user_location_permission_not_granted">App need to have permission location for better functionality</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string-array name="type_arrays">
        <item>Student</item>
        <item>Staff</item>
    </string-array>

    <string name="mapBox_token">pk.eyJ1IjoiamltbXljaGFuIiwiYSI6ImNrYW05MTl6ajBodmoydHFtdXh2MjAycGwifQ.7BnpH_fNB3rAXLDQBDBUrA</string>
</resources>
