<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.taructraverse2.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_chatbot"
        android:name="com.example.taructraverse2.ui.chatbot.ChatbotFragment"
        android:label="@string/title_chatbot"
        tools:layout="@layout/fragment_chatbot" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.taructraverse2.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
</navigation>
